--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,10 @@ header span {
 .menu-pain{
     display: none;
 }
+
+.menu-pain i{
+    font-size: 3rem;
+}
 nav ul {
     display: flex;
     flex-direction: row;
@@ -129,10 +133,12 @@ article:hover{
 }
 
 /* TESTE */
-.texto {
-    max-height: 50%;
-    overflow: hidden;
-}
+/* .texto { */
+    /* max-height: 50%; */
+    /* overflow: hidden; */
+/* } */
+
+
 /* ===== Rodape ===== */
 footer {
     background-color: var(--cor-05);
@@ -178,5 +184,116 @@ footer {
         width: 100%;
     }
 
-    /* TESTE */
+    .texto {
+        max-height: 3rem;
+        overflow: hidden;
+    }
+    header {
+        background-color: fuchsia;
+    }
+}
+
+/* SM Small - celular paisagem (portrait) */
+@media (min-width: 576px) {
+
+    /* teste */
+    header{
+        background-color: rgb(255, 0, 115);
+    }
+
+    .menu-pain{
+        display: block;
+    }
+
+    .menu{
+        display: none;
+    }
+
+    article{
+        
+        height: auto;
+        margin: 1rem; 
+        /* overflow: hidden; */
+        display: flex;
+        flex-direction: column;       
+    }
+
+    .foto{
+        /* overflow: hidden; */
+        margin-right: 0;
+    }
     
+    .foto img {
+        width: 100%;
+    }
+
+    .texto {
+        max-height: 3rem;
+        overflow: hidden;
+    }
+}
+
+/* Tablet */
+
+@media (min-width: 576px) {
+
+    /* teste */
+    header{
+        background-color:#0a0079;
+        padding: 1rem 3rem;
+    }
+    article{
+        margin: 3rem;
+    }
+}
+
+/* Notebook */
+
+@media (min-width: 992px) {
+
+    /* teste */
+    header{
+
+    padding: 1rem 5rem;
+    
+        background-color:#00790a;
+      
+}
+.menu-pain{
+    display: none;
+}
+
+.menu{
+    display: block;
+}
+
+article{
+    
+    height: 16rem;
+    margin: 1rem 0.5rem; 
+    display: grid;
+    grid-template-columns: 16rem auto;  
+}
+
+.foto{
+    overflow: hidden;
+    margin-right: 1rem;
+}
+
+.foto img {
+    height: 100%;
+}
+
+.texto {
+    max-height: 3rem;
+    overflow: hidden;
+}
+}
+/* Desktop */
+
+@media (min-width: 1200px){
+
+    header{
+        background-color: #595959;
+    }
+}
